argocd/manifests/helium/mobile-oracle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mobile-oracle
  name: mobile-oracle
  namespace: helium
spec:
  selector:
    matchLabels:
      app: mobile-oracle
  template:
    metadata:
      labels:
        app: mobile-oracle
    spec:
      serviceAccountName: rds-mobile-oracle-user-access
      containers:
        - name: mobile-oracle
          image: 177106435319.dkr.ecr.us-east-1.amazonaws.com/distributor-oracle:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: oracle-keypair
              mountPath: /usr/src/app/keys
              readOnly: true
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 750Mi
      volumes:
        - name: oracle-keypair
          secret:
            secretName: oracle-keypair
            items:
              - key: keypair.json
                path: keypair.json
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-oracle
  namespace: helium
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: mobile-oracle
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-oracle
  namespace: helium
spec:
  ingressClassName: nginx
  rules:
  - host: mobile-oracle.oracle.test-helium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mobile-oracle
            port:
              number: 8080
