argocd/manifests/helium/vsr-metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vsr-metadata
  name: vsr-metadata
  namespace: helium
spec:
  selector:
    matchLabels:
      app: vsr-metadata
  template:
    metadata:
      labels:
        app: vsr-metadata
    spec:
      containers:
        - name: vsr-metadata
          image: 177106435319.dkr.ecr.us-east-1.amazonaws.com/vsr-metadata-service:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8081
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 750Mi
---
apiVersion: v1
kind: Service
metadata:
  name: vsr-metadata
  namespace: helium
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: http
  selector:
    app: vsr-metadata
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vsr-metadata
  namespace: helium
spec:
  ingressClassName: nginx
  rules:
  - host: vsr-metadata.oracle.test-helium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vsr-metadata
            port:
              number: 8081
